--- a/Garabato.org
+++ b/Garabato.org
@@ -19,19 +19,88 @@
 
   Ihl, sonrie...
 
+* Nombres tentativos para las animas:
+  Quiltros -> Representacion humana de ojos cafe claro imponentes y tez marron
+  
+
 * Habilidades
 
-** Vuelo
+** Kinesia
+   Permite mover objetos usando solo su conciencia, permitiendole mover toda clase de objetos y a si mismo mientras el efecto dure.
    
-   Usando su energia para mover al usuario, el anima le permite a este volar cual superman, a la velocidad que 
-   este desee:
-   
-  Costo .20 unidades de sangre para despegar y 1% de tu sangre actual cada minuto que estes en el aire.
-
 *** Costo: 
+    .20 unidades de sangre al iniciar y 1% de tu sangre actual cada minuto que la uses.
+
+*** Enfriamiento
+    45 segundos
+
+*** Cualidades necesarias
+    Inteligencia
 
 ** Seguro de vida
    Complejo, riesgozo pero muy util, el usuario acepta dar una enorme porcion no letal de sangre, a cambio
-   cuando recibas un deño mortal, resucitaras con una curacion casi instantanea de todas tus heridas.
+   cuando recibas un daño mortal, resucitaras con una curacion casi instantanea de todas tus heridas.
+   
+*** Costo 
+    Costo 42% de tu sangre maxima.
 
-   Costo 45% de tu sangre maxima
+*** Enfriamiento
+    50 dias naturales de enfriamiento
+
+*** Cualidades necesarias
+    Valor
+    Sacrificio
+
+** Siempre a mi lado
+   El usuario entrega una cantidad de sangre cada 15 segundos, a cambio, todos a 10 metros a su redonda ven acelerada drasticamente
+   su regeneracion fisica y su salud mental. Requiere de un anfitrion de corazon generoso y desprendido.
+
+*** Costo 
+    50 ml de sangre cada 15 segundos
+
+*** Enfriamiento
+    Sin enfriamiento.
+
+*** Cualidades necesarias
+    Generosidad
+    Desprendimiento
+
+** Esclavista
+   Doblegas la voluntad de un ente vivo, forzandolo a hacer lo que tu quieras durante el efecto. Tiene menos probabilidad de exito en seres
+   con mentes fuertes.
+
+*** Costo:
+    Progresion de fibbonacci en mililitros cada .5 segundos hasta lograr el estado de esclavo
+
+*** Enfriamiento:
+    10 minutos
+
+*** Cualidades necesarias
+    Desconocidas
+
+** Morador
+   Teletransporta al usuario a una ubicacion que pueda ver fisicamente o en la que ya haya estado antes, canaliza un flujo de energia
+   por 9 segundos para luego aparecer en la ubicacion deseada, puedes llevar acompañantes, pero aumenta el costo de la habilidad y su
+   enfriamiento.
+
+*** Costo:
+    .5 Unidades de sangre mas 80ml por cada acompañante
+*** Enfriamiento
+    8 Horas + 1hora por cada acompañante
+*** Cualidades necesarias
+    Valor
+    Curiosidad
+
+** Zona kinematica
+
+   Tras un gran grito definido por el jugador, todo a 100 metros a la redonda del usuario pasa a ser Kinematico, la gravedad, la inercia y el impulso se anulan.
+   Todo pasa a estar a voluntad del anfritrion, siendo este, libre de moverse  en cualquier angulo y modificar todo a su gusto durante 
+   9 minutos.
+
+*** Costo
+    1 unidad de sangre.
+*** Enfriamiento
+    24 horas
+*** Cualidades necearias
+    Buen humor
+    Templanza
